// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginPage.styles BotaoRecuperaSenha DEVE ser igual ao snapshot 1`] = `
.c0 {
  background-color: transparent;
  border: none;
  margin-top: 10px;
  margin-bottom: 10px;
  cursor: pointer;
}

<button
  className="c0"
/>
`;

exports[`LoginPage.styles Form DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 400px;
  padding: 20px;
  gap: 8px;
  background-color: #ffffff;
  border-color: #000000;
  border-radius: 20px;
  box-shadow: 0px 30px 80px 3px black;
}

<form
  className="c0"
/>
`;

exports[`LoginPage.styles Main DEVE ser igual ao snapshot 1`] = `
.c0 {
  width: 100vw;
  height: 100vh;
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #d3d3d3;
}

<main
  className="c0"
/>
`;

exports[`LoginPage.styles TextoBotao DEVE ser igual ao snapshot 1`] = `
.c0 {
  font-size: 12px;
  font-family: AvertaStd-Regular;
  color: #ffffff;
  margin-top: 0px;
  text-transform: none;
  cursor: pointer;
}

<h2
  className="c0 "
  cursor="pointer"
/>
`;

exports[`LoginPage.styles TextoRecuperarSenha DEVE ser igual ao snapshot 1`] = `
.c0 {
  font-size: 12px;
  font-family: AvertaStd-Regular;
  color: #000000;
  margin-top: 0px;
  text-transform: none;
  cursor: pointer;
}

<h5
  className="c0 "
  cursor="pointer"
/>
`;

exports[`LoginPage.styles TextoTitulo DEVE ser igual ao snapshot 1`] = `
.c0 {
  font-size: 32px;
  font-family: AvertaStd-Regular;
  color: #3D9DB3;
  margin-top: 0px;
  text-transform: none;
  cursor: text;
}

<h1
  className="c0 "
  fontSize="32"
/>
`;
